--- a/rebar.config
+++ b/rebar.config
@@ -110,3 +110,13 @@
         }
      ]
 }.
+
+{plugins, [
+           rebar3_neotoma_plugin
+          ]}.
+
+{provider_hooks, [
+                 {pre, [
+                        {compile, {neotoma, compile}}
+                       ]}
+                 ]}.
